# motiontools

./: .gitignore  README.md  setup.cfg
.github/workflows/: test.yml
examples/moderngl/: README.md  animated_sprites.py  basic_empty_window.py  geometry_lines.py  guide.py  headless_ubunut18_server.py  integration_imgui.py  mglw.py  share.py
examples/moderngl/resources/programs/lines/: lines.glsl
motiontools/: __init__.py  motiontools.py
motiontools/base/: __init__.py  abstractarraymath.py  path.py
tests/: __init__.py  abstractarraymath.py  logger.py  motiontools.py  os.py  path.py
