[metadata]
name = motiontools
version = 0.0.1
description = motiontools
author = WooKyoung Noh
author_email = wookay.noh@gmail.com
url = https://github.com/wookay/motiontools

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
tests_require =
    unittest2

[options.packages.find]
exclude =
    tests
